# BDO

./: .gitignore  CLAUDE.md  MAGIC-ROUTES.md  MUSIC-BDOS.md  README.md
examples/: create-music-bdo.js
src/client/javascript/: README.md  bdo.js  package-lock.json  package.json
src/client/rust/bdo-rs/: Cargo.toml  README.md
src/client/rust/bdo-rs/src/: lib.rs  structs.rs  tests.rs
src/server/node/: .bdo.js.swp  bdo.js  package-lock.json  package.json  server.js
src/server/node/config/: local.js
src/server/node/src/bdo/: bdo.js
src/server/node/src/magic/: magic.js
src/server/node/src/persistence/: db.js
src/server/node/src/utils/: emojicoding.js  music-bdo.js
test/mocha/: .client.js.swp  client.js  package-lock.json  package.json  server.js
