[package]
name = "bdo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sessionless = "0.1.1"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
url = "2.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
actix-rt = "*"
once_cell = "*"
